--- a/example/pom.xml
+++ b/example/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>io.openmessaging.storage</groupId>
         <artifactId>dledger-all</artifactId>
-        <version>0.4.0</version>
+        <version>0.4.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>dledger-example</artifactId>
